--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>3D CSS lib</title>
   </head>
   <body>
-    <div class="c" style="transform: rotateX(24deg) rotateY(32deg);">
+    <div class="c">
       <div class="s"></div>
       <div class="s"></div>
       <div class="s"></div>
